Update by CH on 2022-14-04 at 13:50
Added a new todo comment

--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -929,6 +929,7 @@ No DS$_{AV}$ $\cap$ DS$_{VBP}$  & N/A & N/A & FAIL\\
 \caption{Pass/Fail danger space assertion checks results for the runtime monitoring study.} \label{Overtaking_DS_table}
 \end{table}
 
+\todo[inline]{A table note must be added to explain the use of intersection symbols as shorthand for a "does not overlap" relation between two polygons.}
 % <<<<<<< HEAD
 % \section{Discussion} \label{discussion}
 
