--- a/document/ieee_trans/asr_ieeetrans.tex
+++ b/document/ieee_trans/asr_ieeetrans.tex
@@ -51,7 +51,7 @@ accepted....
 Date of publication ...;
 date of current version ....
 
-\todo{add CAV Forth grand number} 
+% \todo{add CAV Forth grand number} 
 
 This research has in part been funded by the CAVForth, ROBOPILOT and CAPRI projects. These projects are part-funded by the Centre for Connected and Autonomous Vehicles (CCAV), delivered in partnership with Innovate UK under grant numbers 105089 (CAVForth) 103703, (CAPRI) and 103288 (ROBOPILOT). This research was also supported in part by the UKRI Trustworthy Autonomous Systems Node in Functionality under grant number EP/V026518/1. Also special thanks to S\'everin Lemaignan.
 
