--- a/document/source/assertion.bib
+++ b/document/source/assertion.bib
@@ -124,7 +124,7 @@ year={1968}
 @article{myers,
   title={Pass-fail criteria for scenario-based testing of automated driving systems},
   author={Myers, Robert and Saigol, Zeyn},
-  journal={arXiv preprint arXiv:2005.09417},
+  journal={arXiv:2005.09417},
   year={2020}
 }
 
@@ -280,7 +280,7 @@ year={1968}
 @article{chance2021,
   title={On Determinism of Game Engines used for Simulation-based Autonomous Vehicle Verification},
   author={Chance, Greg and Ghobrial, Abanoub and McAreavey, Kevin and Lemaignan, Severin and Pipe, Tony and Eder, Kerstin},
-  journal={arXiv preprint arXiv:2104.06262},
+  journal={arXiv:2104.06262},
   year={2021}
 }
 
@@ -298,21 +298,21 @@ year={1968}
 @article{RSS2_Koopman2019,
   title={Autonomous vehicles meet the physical world: Rss, variability, uncertainty, and proving safety},
   author={Koopman, Philip and Osyk, Beth and Weast, Jack},
-  journal={arXiv preprint arXiv:1911.01207},
+  journal={arXiv:1911.01207},
   year={2019}
 }
 
 @article{RSS_Shalev_Shwartz2017,
   title={On a formal model of safe and scalable self-driving cars},
   author={Shalev-Shwartz, Shai and Shammah, Shaked and Shashua, Amnon},
-  journal={arXiv preprint arXiv:1708.06374},
+  journal={arXiv:1708.06374},
   year={2017}
 }
 
 @article{Kang2020,
   title={Model assertions for monitoring and improving ML models},
   author={Kang, Daniel and Raghavan, Deepti and Bailis, Peter and Zaharia, Matei},
-  journal={arXiv preprint arXiv:2003.01668},
+  journal={arXiv:2003.01668},
   year={2020}
 }
 
@@ -357,7 +357,7 @@ year={1968}
 @inproceedings{EthicalBlackBox,
   title={The case for an ethical black box},
   author={Winfield, Alan FT and Jirotka, Marina},
-  booktitle={Annual Conference Towards Autonomous Robotic Systems},
+  booktitle={Towards Autonomous Robotic Systems},
   pages={262--273},
   year={2017},
   organization={Springer}
@@ -366,7 +366,7 @@ year={1968}
 @article{Yolo,
   title={Yolov3: An incremental improvement},
   author={Redmon, Joseph and Farhadi, Ali},
-  journal={arXiv preprint arXiv:1804.02767},
+  journal={arXiv:1804.02767},
   year={2018}
 }
 
@@ -485,13 +485,13 @@ year={1968}
   title={Transparency for Robots and Autonomous Systems: Fundamentals, technologies and applications},
   author={Wortham, Robert H},
   year={2020},
-  publisher={Institution of Engineering and Technology}
+  publisher={IET}
 }
 
 @article{corso2020survey,
   title={A survey of algorithms for black-box safety validation},
   author={Corso, Anthony and Moss, Robert J and Koren, Mark and Lee, Ritchie and Kochenderfer, Mykel J},
-  journal={arXiv preprint arXiv:2005.02979},
+  journal={arXiv:2005.02979},
   year={2020}
 }
 
