--- a/document/ieee_trans/asr_ieeetrans.tex
+++ b/document/ieee_trans/asr_ieeetrans.tex
@@ -113,7 +113,7 @@ is a Research Fellow in Robotics Safety \& Control at Bristol Robotics Laborator
 \end{IEEEbiography}
 \vskip -2\baselineskip plus -1fil  
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/greg.png}}]{Greg Chance}
-received the B.Sc. (Hons.) and Ph.D.\ degrees in physics from the University of Bath, in 2001 and 2005, respectively. He was previously at the Bristol Robotics Lab and is currently a Senior Research Associate with the Trustworthy Systems Laboratory, University of Bristol. His current research interests are simulation-based verification for autonomous systems and cybersecurity. He has ten years industrial experience researching for Oxford Instruments, and BAE Systems. Dr Chance is a Chartered Engineer and a member of the Institute of Physics and holds a patent for a novel plasma control method. 
+received the B.Sc. (Hons.) and Ph.D.\ degrees in physics from the University of Bath, in 2001 and 2005, respectively. He was previously at the Bristol Robotics Lab and is currently a Senior Research Associate with the Trustworthy Systems Laboratory, University of Bristol. His current research interests are simulation-based verification for autonomous systems and cybersecurity. He has ten years industrial experience researching for Oxford Instruments, and BAE Systems. Dr Chance is a Chartered Engineer and a member of the Institute of Physics. 
 \end{IEEEbiography}
 \vskip -2\baselineskip plus -1fil  
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/abanoub}}]{Abanoub Ghobrial}
